// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Paragraph does not render dropCap when first children is not plain text 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  color: #3B3B3B;
  font-family: "DM Sans",sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
  letter-spacing: 0;
}

.emotion-0 svg {
  fill: #3B3B3B;
}

<p
    class="emotion-0"
  >
    <b>
      paragraph
    </b>
     component
  </p>
</DocumentFragment>
`;

exports[`Paragraph handles dropCap with React element as first child 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  color: #3B3B3B;
  font-family: "DM Sans",sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
  letter-spacing: 0;
}

.emotion-0 svg {
  fill: #3B3B3B;
}

<p
    class="emotion-0"
  >
    <span>
      element
    </span>
     text
  </p>
</DocumentFragment>
`;

exports[`Paragraph handles dropCap with complex fragment containing mixed content 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  color: #3B3B3B;
  font-family: "DM Sans",sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
  letter-spacing: 0;
}

.emotion-0 svg {
  fill: #3B3B3B;
}

.emotion-1 {
  float: left;
  color: #111111;
}

@media screen and (max-width: 767px) {
  .emotion-1 {
    font-family: "Bitter",serif;
    font-size: 56px;
    line-height: 1.125;
    font-weight: 500;
    letter-spacing: 0;
  }
}

@media screen and (min-width: 768px) and (max-width: 1023px) {
  .emotion-1 {
    font-family: "Bitter",serif;
    font-size: 64px;
    line-height: 1.125;
    font-weight: 500;
    letter-spacing: 0;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-1 {
    font-family: "Bitter",serif;
    font-size: 80px;
    line-height: 1.125;
    font-weight: 500;
    letter-spacing: 0;
  }
}

.emotion-1 svg {
  fill: #111111;
}

@media screen and (max-width: 767px) {
  .emotion-1 {
    -webkit-padding-end: 8px;
    padding-inline-end: 8px;
    padding-block-end: 8px;
  }
}

@media screen and (min-width: 768px) and (max-width: 1023px) {
  .emotion-1 {
    -webkit-padding-end: 12px;
    padding-inline-end: 12px;
    padding-block-end: 12px;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-1 {
    -webkit-padding-end: 16px;
    padding-inline-end: 16px;
    padding-block-end: 16px;
  }
}

<p
    aria-hidden="true"
    class="emotion-0"
  >
    <span
      class="emotion-1"
    >
      D
    </span>
    eep nested fragment starts here
    <b>
      bold text
    </b>
    <span>
      span content
    </span>
  </p>
  .emotion-0 {
  display: block;
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  height: 1px;
  overflow: hidden;
  position: absolute;
  white-space: nowrap;
  width: 1px;
  margin: -1px;
}

<span
    class="emotion-0"
  >
    Deep nested fragment starts here
    <b>
      bold text
    </b>
    <span>
      span content
    </span>
  </span>
</DocumentFragment>
`;

exports[`Paragraph handles dropCap with empty string 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  color: #3B3B3B;
  font-family: "DM Sans",sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
  letter-spacing: 0;
}

.emotion-0 svg {
  fill: #3B3B3B;
}

<p
    class="emotion-0"
  />
</DocumentFragment>
`;

exports[`Paragraph handles dropCap with fragment containing string as first child 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  color: #3B3B3B;
  font-family: "DM Sans",sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
  letter-spacing: 0;
}

.emotion-0 svg {
  fill: #3B3B3B;
}

.emotion-1 {
  float: left;
  color: #111111;
}

@media screen and (max-width: 767px) {
  .emotion-1 {
    font-family: "Bitter",serif;
    font-size: 56px;
    line-height: 1.125;
    font-weight: 500;
    letter-spacing: 0;
  }
}

@media screen and (min-width: 768px) and (max-width: 1023px) {
  .emotion-1 {
    font-family: "Bitter",serif;
    font-size: 64px;
    line-height: 1.125;
    font-weight: 500;
    letter-spacing: 0;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-1 {
    font-family: "Bitter",serif;
    font-size: 80px;
    line-height: 1.125;
    font-weight: 500;
    letter-spacing: 0;
  }
}

.emotion-1 svg {
  fill: #111111;
}

@media screen and (max-width: 767px) {
  .emotion-1 {
    -webkit-padding-end: 8px;
    padding-inline-end: 8px;
    padding-block-end: 8px;
  }
}

@media screen and (min-width: 768px) and (max-width: 1023px) {
  .emotion-1 {
    -webkit-padding-end: 12px;
    padding-inline-end: 12px;
    padding-block-end: 12px;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-1 {
    -webkit-padding-end: 16px;
    padding-inline-end: 16px;
    padding-block-end: 16px;
  }
}

<p
    aria-hidden="true"
    class="emotion-0"
  >
    <span
      class="emotion-1"
    >
      H
    </span>
    ello world from fragment
    <span>
      more content
    </span>
  </p>
  .emotion-0 {
  display: block;
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  height: 1px;
  overflow: hidden;
  position: absolute;
  white-space: nowrap;
  width: 1px;
  margin: -1px;
}

<span
    class="emotion-0"
  >
    Hello world from fragment
    <span>
      more content
    </span>
  </span>
</DocumentFragment>
`;

exports[`Paragraph handles dropCap with nested React Fragment structure 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  color: #3B3B3B;
  font-family: "DM Sans",sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
  letter-spacing: 0;
}

.emotion-0 svg {
  fill: #3B3B3B;
}

.emotion-1 {
  float: left;
  color: #111111;
}

@media screen and (max-width: 767px) {
  .emotion-1 {
    font-family: "Bitter",serif;
    font-size: 56px;
    line-height: 1.125;
    font-weight: 500;
    letter-spacing: 0;
  }
}

@media screen and (min-width: 768px) and (max-width: 1023px) {
  .emotion-1 {
    font-family: "Bitter",serif;
    font-size: 64px;
    line-height: 1.125;
    font-weight: 500;
    letter-spacing: 0;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-1 {
    font-family: "Bitter",serif;
    font-size: 80px;
    line-height: 1.125;
    font-weight: 500;
    letter-spacing: 0;
  }
}

.emotion-1 svg {
  fill: #111111;
}

@media screen and (max-width: 767px) {
  .emotion-1 {
    -webkit-padding-end: 8px;
    padding-inline-end: 8px;
    padding-block-end: 8px;
  }
}

@media screen and (min-width: 768px) and (max-width: 1023px) {
  .emotion-1 {
    -webkit-padding-end: 12px;
    padding-inline-end: 12px;
    padding-block-end: 12px;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-1 {
    -webkit-padding-end: 16px;
    padding-inline-end: 16px;
    padding-block-end: 16px;
  }
}

<p
    aria-hidden="true"
    class="emotion-0"
  >
    <span
      class="emotion-1"
    >
      N
    </span>
    ested fragment text
    <em>
      emphasized text
    </em>
  </p>
  .emotion-0 {
  display: block;
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  height: 1px;
  overflow: hidden;
  position: absolute;
  white-space: nowrap;
  width: 1px;
  margin: -1px;
}

<span
    class="emotion-0"
  >
    Nested fragment text
    <em>
      emphasized text
    </em>
  </span>
</DocumentFragment>
`;

exports[`Paragraph handles dropCap with nested fragment structure 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  color: #3B3B3B;
  font-family: "DM Sans",sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
  letter-spacing: 0;
}

.emotion-0 svg {
  fill: #3B3B3B;
}

.emotion-1 {
  float: left;
  color: #111111;
}

@media screen and (max-width: 767px) {
  .emotion-1 {
    font-family: "Bitter",serif;
    font-size: 56px;
    line-height: 1.125;
    font-weight: 500;
    letter-spacing: 0;
  }
}

@media screen and (min-width: 768px) and (max-width: 1023px) {
  .emotion-1 {
    font-family: "Bitter",serif;
    font-size: 64px;
    line-height: 1.125;
    font-weight: 500;
    letter-spacing: 0;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-1 {
    font-family: "Bitter",serif;
    font-size: 80px;
    line-height: 1.125;
    font-weight: 500;
    letter-spacing: 0;
  }
}

.emotion-1 svg {
  fill: #111111;
}

@media screen and (max-width: 767px) {
  .emotion-1 {
    -webkit-padding-end: 8px;
    padding-inline-end: 8px;
    padding-block-end: 8px;
  }
}

@media screen and (min-width: 768px) and (max-width: 1023px) {
  .emotion-1 {
    -webkit-padding-end: 12px;
    padding-inline-end: 12px;
    padding-block-end: 12px;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-1 {
    -webkit-padding-end: 16px;
    padding-inline-end: 16px;
    padding-block-end: 16px;
  }
}

<p
    aria-hidden="true"
    class="emotion-0"
  >
    <span
      class="emotion-1"
    >
      T
    </span>
    esting nested fragment
    <span>
      additional content
    </span>
  </p>
  .emotion-0 {
  display: block;
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  height: 1px;
  overflow: hidden;
  position: absolute;
  white-space: nowrap;
  width: 1px;
  margin: -1px;
}

<span
    class="emotion-0"
  >
    Testing nested fragment
    <span>
      additional content
    </span>
  </span>
</DocumentFragment>
`;

exports[`Paragraph handles dropCap with null first child 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  color: #3B3B3B;
  font-family: "DM Sans",sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
  letter-spacing: 0;
}

.emotion-0 svg {
  fill: #3B3B3B;
}

.emotion-1 {
  float: left;
  color: #111111;
}

@media screen and (max-width: 767px) {
  .emotion-1 {
    font-family: "Bitter",serif;
    font-size: 56px;
    line-height: 1.125;
    font-weight: 500;
    letter-spacing: 0;
  }
}

@media screen and (min-width: 768px) and (max-width: 1023px) {
  .emotion-1 {
    font-family: "Bitter",serif;
    font-size: 64px;
    line-height: 1.125;
    font-weight: 500;
    letter-spacing: 0;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-1 {
    font-family: "Bitter",serif;
    font-size: 80px;
    line-height: 1.125;
    font-weight: 500;
    letter-spacing: 0;
  }
}

.emotion-1 svg {
  fill: #111111;
}

@media screen and (max-width: 767px) {
  .emotion-1 {
    -webkit-padding-end: 8px;
    padding-inline-end: 8px;
    padding-block-end: 8px;
  }
}

@media screen and (min-width: 768px) and (max-width: 1023px) {
  .emotion-1 {
    -webkit-padding-end: 12px;
    padding-inline-end: 12px;
    padding-block-end: 12px;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-1 {
    -webkit-padding-end: 16px;
    padding-inline-end: 16px;
    padding-block-end: 16px;
  }
}

<p
    aria-hidden="true"
    class="emotion-0"
  >
    <span
      class="emotion-1"
    >
      t
    </span>
    ext content
  </p>
  .emotion-0 {
  display: block;
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  height: 1px;
  overflow: hidden;
  position: absolute;
  white-space: nowrap;
  width: 1px;
  margin: -1px;
}

<span
    class="emotion-0"
  >
    text content
  </span>
</DocumentFragment>
`;

exports[`Paragraph handles dropCap with numeric first child 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  color: #3B3B3B;
  font-family: "DM Sans",sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
  letter-spacing: 0;
}

.emotion-0 svg {
  fill: #3B3B3B;
}

<p
    class="emotion-0"
  >
    123 text content
  </p>
</DocumentFragment>
`;

exports[`Paragraph handles dropCap with true React Fragment as first child 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  color: #3B3B3B;
  font-family: "DM Sans",sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
  letter-spacing: 0;
}

.emotion-0 svg {
  fill: #3B3B3B;
}

.emotion-1 {
  float: left;
  color: #111111;
}

@media screen and (max-width: 767px) {
  .emotion-1 {
    font-family: "Bitter",serif;
    font-size: 56px;
    line-height: 1.125;
    font-weight: 500;
    letter-spacing: 0;
  }
}

@media screen and (min-width: 768px) and (max-width: 1023px) {
  .emotion-1 {
    font-family: "Bitter",serif;
    font-size: 64px;
    line-height: 1.125;
    font-weight: 500;
    letter-spacing: 0;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-1 {
    font-family: "Bitter",serif;
    font-size: 80px;
    line-height: 1.125;
    font-weight: 500;
    letter-spacing: 0;
  }
}

.emotion-1 svg {
  fill: #111111;
}

@media screen and (max-width: 767px) {
  .emotion-1 {
    -webkit-padding-end: 8px;
    padding-inline-end: 8px;
    padding-block-end: 8px;
  }
}

@media screen and (min-width: 768px) and (max-width: 1023px) {
  .emotion-1 {
    -webkit-padding-end: 12px;
    padding-inline-end: 12px;
    padding-block-end: 12px;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-1 {
    -webkit-padding-end: 16px;
    padding-inline-end: 16px;
    padding-block-end: 16px;
  }
}

<p
    aria-hidden="true"
    class="emotion-0"
  >
    <span
      class="emotion-1"
    >
      F
    </span>
    ragment text content
    <span>
      additional content
    </span>
    more text
  </p>
  .emotion-0 {
  display: block;
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  height: 1px;
  overflow: hidden;
  position: absolute;
  white-space: nowrap;
  width: 1px;
  margin: -1px;
}

<span
    class="emotion-0"
  >
    Fragment text content
    <span>
      additional content
    </span>
    more text
  </span>
</DocumentFragment>
`;

exports[`Paragraph renders Paragraph 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  color: #3B3B3B;
  font-family: "DM Sans",sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
  letter-spacing: 0;
}

.emotion-0 svg {
  fill: #3B3B3B;
}

<p
    class="emotion-0"
  >
    paragraph component
  </p>
</DocumentFragment>
`;

exports[`Paragraph renders Paragraph with logical props 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  color: #3B3B3B;
  font-family: "DM Sans",sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
  letter-spacing: 0;
  margin-inline: 48px;
  margin-block: 32px;
  padding-inline: 8px;
  padding-block: 16px;
}

.emotion-0 svg {
  fill: #3B3B3B;
}

<p
    class="emotion-0"
  >
    paragraph component
  </p>
</DocumentFragment>
`;

exports[`Paragraph renders Paragraph with overrides 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  color: #FFFFFF;
  font-family: "DM Sans",sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
  letter-spacing: 0;
}

.emotion-0 svg {
  fill: #FFFFFF;
}

<p
    class="emotion-0"
  >
    paragraph component
  </p>
</DocumentFragment>
`;

exports[`Paragraph renders empty Paragraph with dropCap without crashing  1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  color: #3B3B3B;
  font-family: "DM Sans",sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
  letter-spacing: 0;
}

.emotion-0 svg {
  fill: #3B3B3B;
}

<p
    class="emotion-0"
  />
</DocumentFragment>
`;

exports[`Paragraph renders with additional HTML attributes 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  color: #3B3B3B;
  font-family: "DM Sans",sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
  letter-spacing: 0;
}

.emotion-0 svg {
  fill: #3B3B3B;
}

<p
    class="emotion-0"
    id="paragraph-id"
  >
    paragraph component
  </p>
</DocumentFragment>
`;

exports[`Paragraph renders with drop cap 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  color: #3B3B3B;
  font-family: "DM Sans",sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
  letter-spacing: 0;
}

.emotion-0 svg {
  fill: #3B3B3B;
}

.emotion-1 {
  float: left;
  color: #111111;
}

@media screen and (max-width: 767px) {
  .emotion-1 {
    font-family: "Bitter",serif;
    font-size: 56px;
    line-height: 1.125;
    font-weight: 500;
    letter-spacing: 0;
  }
}

@media screen and (min-width: 768px) and (max-width: 1023px) {
  .emotion-1 {
    font-family: "Bitter",serif;
    font-size: 64px;
    line-height: 1.125;
    font-weight: 500;
    letter-spacing: 0;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-1 {
    font-family: "Bitter",serif;
    font-size: 80px;
    line-height: 1.125;
    font-weight: 500;
    letter-spacing: 0;
  }
}

.emotion-1 svg {
  fill: #111111;
}

@media screen and (max-width: 767px) {
  .emotion-1 {
    -webkit-padding-end: 8px;
    padding-inline-end: 8px;
    padding-block-end: 8px;
  }
}

@media screen and (min-width: 768px) and (max-width: 1023px) {
  .emotion-1 {
    -webkit-padding-end: 12px;
    padding-inline-end: 12px;
    padding-block-end: 12px;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-1 {
    -webkit-padding-end: 16px;
    padding-inline-end: 16px;
    padding-block-end: 16px;
  }
}

<p
    aria-hidden="true"
    class="emotion-0"
  >
    <span
      class="emotion-1"
    >
      p
    </span>
    aragraph component
  </p>
  .emotion-0 {
  display: block;
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  height: 1px;
  overflow: hidden;
  position: absolute;
  white-space: nowrap;
  width: 1px;
  margin: -1px;
}

<span
    class="emotion-0"
  >
    paragraph component
  </span>
</DocumentFragment>
`;

exports[`Paragraph renders with drop cap and complex children 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  color: #3B3B3B;
  font-family: "DM Sans",sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
  letter-spacing: 0;
}

.emotion-0 svg {
  fill: #3B3B3B;
}

.emotion-1 {
  float: left;
  color: #111111;
}

@media screen and (max-width: 767px) {
  .emotion-1 {
    font-family: "Bitter",serif;
    font-size: 56px;
    line-height: 1.125;
    font-weight: 500;
    letter-spacing: 0;
  }
}

@media screen and (min-width: 768px) and (max-width: 1023px) {
  .emotion-1 {
    font-family: "Bitter",serif;
    font-size: 64px;
    line-height: 1.125;
    font-weight: 500;
    letter-spacing: 0;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-1 {
    font-family: "Bitter",serif;
    font-size: 80px;
    line-height: 1.125;
    font-weight: 500;
    letter-spacing: 0;
  }
}

.emotion-1 svg {
  fill: #111111;
}

@media screen and (max-width: 767px) {
  .emotion-1 {
    -webkit-padding-end: 8px;
    padding-inline-end: 8px;
    padding-block-end: 8px;
  }
}

@media screen and (min-width: 768px) and (max-width: 1023px) {
  .emotion-1 {
    -webkit-padding-end: 12px;
    padding-inline-end: 12px;
    padding-block-end: 12px;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-1 {
    -webkit-padding-end: 16px;
    padding-inline-end: 16px;
    padding-block-end: 16px;
  }
}

<p
    aria-hidden="true"
    class="emotion-0"
  >
    <span
      class="emotion-1"
    >
      p
    </span>
    aragraph 
    <b>
      component
    </b>
     with 
    <a
      href="/"
    >
      link
    </a>
  </p>
  .emotion-0 {
  display: block;
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  height: 1px;
  overflow: hidden;
  position: absolute;
  white-space: nowrap;
  width: 1px;
  margin: -1px;
}

<span
    class="emotion-0"
  >
    paragraph 
    <b>
      component
    </b>
     with 
    <a
      href="/"
    >
      link
    </a>
  </span>
</DocumentFragment>
`;

exports[`Paragraph renders with dropCap logical props 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  color: #3B3B3B;
  font-family: "DM Sans",sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
  letter-spacing: 0;
}

.emotion-0 svg {
  fill: #3B3B3B;
}

.emotion-1 {
  float: left;
  color: #111111;
  margin-inline: 8px;
  margin-block: 8px;
  padding-inline: 8px;
  padding-block: 8px;
}

@media screen and (max-width: 767px) {
  .emotion-1 {
    font-family: "Bitter",serif;
    font-size: 56px;
    line-height: 1.125;
    font-weight: 500;
    letter-spacing: 0;
  }
}

@media screen and (min-width: 768px) and (max-width: 1023px) {
  .emotion-1 {
    font-family: "Bitter",serif;
    font-size: 64px;
    line-height: 1.125;
    font-weight: 500;
    letter-spacing: 0;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-1 {
    font-family: "Bitter",serif;
    font-size: 80px;
    line-height: 1.125;
    font-weight: 500;
    letter-spacing: 0;
  }
}

.emotion-1 svg {
  fill: #111111;
}

@media screen and (max-width: 767px) {
  .emotion-1 {
    -webkit-padding-end: 8px;
    padding-inline-end: 8px;
    padding-block-end: 8px;
  }
}

@media screen and (min-width: 768px) and (max-width: 1023px) {
  .emotion-1 {
    -webkit-padding-end: 12px;
    padding-inline-end: 12px;
    padding-block-end: 12px;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-1 {
    -webkit-padding-end: 16px;
    padding-inline-end: 16px;
    padding-block-end: 16px;
  }
}

<p
    aria-hidden="true"
    class="emotion-0"
  >
    <span
      class="emotion-1"
    >
      d
    </span>
    ropcap with logical props
  </p>
  .emotion-0 {
  display: block;
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  height: 1px;
  overflow: hidden;
  position: absolute;
  white-space: nowrap;
  width: 1px;
  margin: -1px;
}

<span
    class="emotion-0"
  >
    dropcap with logical props
  </span>
</DocumentFragment>
`;

exports[`Paragraph renders with dropCap overrides for both stylePreset and typographyPreset 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  color: #3B3B3B;
  font-family: "DM Sans",sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
  letter-spacing: 0;
}

.emotion-0 svg {
  fill: #3B3B3B;
}

.emotion-1 {
  float: left;
  font-family: "Bitter",serif;
  font-size: 18px;
  line-height: 1.125;
  font-weight: 500;
  letter-spacing: 0;
  color: #FFFFFF;
}

.emotion-1 svg {
  fill: #FFFFFF;
}

@media screen and (max-width: 767px) {
  .emotion-1 {
    -webkit-padding-end: 8px;
    padding-inline-end: 8px;
    padding-block-end: 8px;
  }
}

@media screen and (min-width: 768px) and (max-width: 1023px) {
  .emotion-1 {
    -webkit-padding-end: 12px;
    padding-inline-end: 12px;
    padding-block-end: 12px;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-1 {
    -webkit-padding-end: 16px;
    padding-inline-end: 16px;
    padding-block-end: 16px;
  }
}

<p
    aria-hidden="true"
    class="emotion-0"
  >
    <span
      class="emotion-1"
    >
      p
    </span>
    aragraph with full dropCap overrides
  </p>
  .emotion-0 {
  display: block;
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  height: 1px;
  overflow: hidden;
  position: absolute;
  white-space: nowrap;
  width: 1px;
  margin: -1px;
}

<span
    class="emotion-0"
  >
    paragraph with full dropCap overrides
  </span>
</DocumentFragment>
`;

exports[`Subscript renders Subscript 1`] = `
<DocumentFragment>
  .emotion-0 {
  font-size: 80%;
}

<sub
    class="emotion-0"
  >
    subscript component
  </sub>
</DocumentFragment>
`;

exports[`Superscript renders Superscript 1`] = `
<DocumentFragment>
  .emotion-0 {
  font-size: 80%;
}

<sup
    class="emotion-0"
  >
    superscript component
  </sup>
</DocumentFragment>
`;
